# howfast_core

./: Cargo.toml
src/: lib.rs  speed_test.rs
src/speed_test/: config.rs  error.rs  location.rs
src/speed_test/config/: speed_test_client_config.rs  speed_test_server_config.rs
src/speed_test/location/: distance.rs
