[package]
name = "howfast_core"
version = "0.1.0"
authors = ["Nelson Nelson-Atuonwu <nellyatuonwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["blocking"] }
chrono = "0.4.19"
url = "2.2.0"
serde = { version = "1.0.118", features = ["derive"] }
roxmltree = "0.14.0"
rayon = "1.5.0"
md5 = "0.7.0"
iter-read = "0.3.0"